--- a/README
+++ b/README
@@ -5,6 +5,13 @@ You can use this code however you like for the current time.  I just ask if you 
 Also if you like this program and want to buy me a beer, paypal donations are accepted at john@teqsun.com
 
 
+Pre-Requisites:
+* MySQL .net Connector http://dev.mysql.com/downloads/connector/net/5.1.html
+* Visual Studio 2010 + (express edition ok)
+
+
+Installation Instructions:
+
 To install, run all of the scripts in the SQL directory with your dayz user starting with "setupdb.sql"
 then run the stored proc sql files to insert them into your db.
 
